[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkan_sys = { path = "../vulkan_sys" }
forge_math = { path = "../forge-math" }
forge_image_format = { path = "../forge-image-format" }
log = "0.4"
bitflags = "1.3"
winapi = { version = "0.3.9", features = ["dxgiformat"] }

[features]
default = ["vulkan"]
vulkan = []
