[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forge_math = { path = "../forge-math" }
forge_image_format = { path = "../forge-image-format" }
log = "0.4"
bitflags = "1.3"
winapi = { version = "0.3.9", features = ["dxgiformat"] }
raw-window-handle = "0.4.2"
winit = "0.26.1"
cfg-if = "1.0.0"
spirv_cross = { git = "https://github.com/grovesNL/spirv_cross.git", features = ["hlsl", "msl", "glsl"]}
# vulkan
ash = "0.35.1+1.2.203"
gpu-allocator = "0.16.0"

[features]
default = ["vulkan"]
vulkan = []
xlib = ["vulkan_sys/vulkan-xlib"]
xcb = ["vulkan_sys/vulkan-xcb"]

